--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ material3WindowSizeClass = "1.3.1"
 navigationCompose = "2.9.0"
 kotlinxSerializationJson = "1.7.3"
 media3Common = "1.7.1"
+coilCompose = "2.3.0"
+glide = "4.15.1"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -45,6 +47,8 @@ androidx-media3-datasource-okhttp = { module = "androidx.media3:media3-datasourc
 androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Common" }
 androidx-media3-session = { module = "androidx.media3:media3-session", version.ref = "media3Common" }
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Common" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
