--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
-        android:allowBackup="true"
         android:name=".presentation.main.other.RhythmFlowApplication"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -28,9 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".domain.musicplayer.service.RhythmFlowService"
-            android:foregroundServiceType="mediaPlayback"
+        <service
+            android:name=".domain.musicplayer.service.RhythmFlowService"
             android:exported="true"
+            android:foregroundServiceType="mediaPlayback"
             tools:ignore="ForegroundServicePermission">
             <intent-filter>
                 <action android:name="androidx.media3.session.MediaSessionService" />
